[tool.poetry]
name = "db-rpg"
version = "0.1.0"
description = "A Dragon Ball based RPG."
authors = ["Luna <ojackson287@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
